[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/UI.gd" type="Script" id=1]

[node name="UI" type="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -23.0
margin_right = 250.0
margin_bottom = 77.0
rect_min_size = Vector2( 300, 100 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 296.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 292.0
margin_bottom = 68.0
size_flags_vertical = 7
text = "GAME OVER"
align = 1
valign = 1

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 292.0
margin_bottom = 92.0

[node name="PlayButton" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 43.0
margin_bottom = 20.0
text = "PLAY"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Buttons"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 47.0
margin_right = 243.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="ExitButton" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 247.0
margin_right = 292.0
margin_bottom = 20.0
text = "QUIT"

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="button_down" from="VBoxContainer/Buttons/PlayButton" to="." method="_on_PlayButton_button_down"]
[connection signal="button_down" from="VBoxContainer/Buttons/ExitButton" to="." method="_on_ExitButton_button_down"]
[connection signal="timeout" from="Timer" to="." method="disable_play_button"]
